# internal/models/user.go
@@ -1,0 +1,19 @@
+package models
+
+import (
+	"time"
+)
+
+type User struct {
+	ID        uint       `gorm:"primaryKey" json:"id"`
+	Email     string     `gorm:"unique;not null" json:"email"`
+	Password  string     `gorm:"not null" json:"-"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `json:"deleted_at,omitempty"`
+}
+
+type UserRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
